// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackCards creates correct snapshot for an array of notebooks 1`] = `
<StackCards
  classes={
    Object {
      "bottomControlDiv": "StackCards-bottomControlDiv-2",
      "noItemsMessage": "StackCards-noItemsMessage-3",
      "stackDiv": "StackCards-stackDiv-1",
    }
  }
  createPermission="create"
  deletePermission="delete"
  deleteStack={[Function]}
  editPermission="edit"
  openCreationForm={[Function]}
  openPermission="open"
  openStack={[Function]}
  stacks={
    Array [
      Object {
        "displayName": "name1",
        "id": "1",
        "type": "type1",
      },
      Object {
        "displayName": "name2",
        "id": "2",
        "type": "type2",
      },
      Object {
        "displayName": "name3",
        "id": "3",
        "type": "type3",
      },
    ]
  }
  typeName="expectedTypeName"
  userPermissions={[Function]}
/>
`;

exports[`StackCards creates correct snapshot for an empty array 1`] = `
<StackCards
  classes={
    Object {
      "bottomControlDiv": "StackCards-bottomControlDiv-2",
      "noItemsMessage": "StackCards-noItemsMessage-3",
      "stackDiv": "StackCards-stackDiv-1",
    }
  }
  createPermission="create"
  deletePermission="delete"
  deleteStack={[Function]}
  editPermission="edit"
  openCreationForm={[Function]}
  openPermission="open"
  openStack={[Function]}
  stacks={Array []}
  typeName="expectedTypeName"
  userPermissions={[Function]}
/>
`;
